Tue Dec  9  8:11:36 2008  Brent Roman  <brent@mbari.org>

     * eval.c:  added Continuation.thread method
        * cc_mark frees the continuation's stack if its thread is dead
          avoids recursive gc that segfaults [see Dec 5th, 2007 ruby-core]

        * added cast in PUSH_FRAME() to eliminate gcc 4.2 compiler warnings    
                   
        * THREAD_DATA() replaces rb_thread_check() in most contexts
        
        * rb_thread_check now complains when passed a Continuation
          (no longer need redundant check in thgroup_add()
        
        * rb_callcc() assigns th->thread before scope_dup()
          this avoids segfaults if this scope_dup() triggers a gc pass
        

Fri Aug  8 10:53:52 2008  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb: randomize source port and transaction id.
	  CVE-2008-1447.

	* lib/resolv-replace.rb (UDPSocket#bind): don't resolv host if host is
	  "".

Mon Aug  4 14:49:35 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/net/smtp.rb (Net::SMTP::rcptto): fix a typo. a patch from
	  Masao Takaku <masao at nii.ac.jp>
	  fix [ruby-dev:35489].

Mon Aug  4 14:13:15 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* regex.c (xmalloc, xrealloc, xfree): not to use ruby managed memory.

	* regex.c (DOUBLE_STACK, re_compile_fastmap0, re_adjust_startpos),
	  (re_search, re_match_exec): check if failed to allocate memory.

Mon Aug  4 13:53:42 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big2str0, bigsqr): made interruptible.  [ruby-Bugs-20622]

Mon Aug  4 13:31:41 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (check_uint, rb_num2uint, rb_fix2uint): fixed wrong check
	  about 64bit positive value.
Mon Aug  4 13:31:41 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (check_uint, rb_num2uint, rb_fix2uint): strict check.
	  fixed [ruby-dev:33683]
Mon Aug 11 09:37:17 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/dl/dl.c (rb_str_to_ptr): should propagate taint to dlptr.
